# radix

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml  release.yaml
docs/: MANUAL.md  radix.1
include/: ascii_constants.h  base.h  constants.h  format.h  numericFMT.h  return_codes.h  sign.h
include/conversion/: conversion.h
include/core/: core.h
include/logging/: logging.h
include/parsing/: parsing.h
include/validation/: validation.h
src/: main.cpp
src/conversion/: conversion.cpp
src/core/: core.cpp
src/logging/: logging.cpp
src/parsing/: parsing.cpp
src/validation/: validation.cpp
tests/: test_conversion.cpp  test_core.cpp  test_parsing.cpp  test_validation.cpp
toolchains/: arm64.cmake  x86_64.cmake
